Fix navigation main list-group-item alignment

--- a/resources/stylesheets/component/desktop_sm/aside.navigation_main.less
+++ b/resources/stylesheets/component/desktop_sm/aside.navigation_main.less
@@ -87,6 +87,7 @@ body{
 			line-height: 12px;
 		}
 		a.list-group-item {
+			padding-top: 2px;
 			height: 32px;
 			line-height: 12px;
 		}
